--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+    <table style="border: 1px black; background-color: yellow; "> Student Details
+       <thead>
+        <td>NAME</td>
+        <td>AGE</td>
+        <td>BRANCH</td>
+       </thead>
+       <tbody>
+        <tr>
+            <td>Shaw</td>
+            <td>20</td>
+            <td>CSE</td>
+        </tr>
+        <tr>
+            <td>Adil</td>
+            <td>20</td>
+            <td>ECE</td>
+        </tr>
+       </tbody>
+
+    </table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
