--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <table style="border: 1px black; background-color: yellow; "> Student Details
+    <table style="background-color: yellow; " border="1px">
+       <caption align="center">Student details</caption>
        <thead>
         <td>NAME</td>
         <td>AGE</td>
