--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <table style="background-color: yellow; " border="1px">
-       <caption align="center">Student details</caption>
+    <table style="background-color: rgb(255, 255, 0); " border="1px solid rgb(0,0,0)">
+       <caption align="center">Student Details</caption>
        <thead>
         <td>NAME</td>
         <td>AGE</td>
