--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-    <table style="background-color: rgb(255, 255, 0); " border="1px solid rgb(0,0,0)">
+    <table style="background-color: rgb(255, 255, 0); border: 1px solid rgb(0,0,0);">
        <caption align="center">Student Details</caption>
        <thead>
-        <td>NAME</td>
-        <td>AGE</td>
-        <td>BRANCH</td>
+        <th>NAME</th>
+        <th>AGE</th>
+        <th>BRANCH</th>
        </thead>
        <tbody>
         <tr>
